# FDF-C-language

./: CMakeLists.txt  Makefile  README.md
inc/: fdf.h  get_next_line.h
libft/: ft_strsub.c
maps/: 42.fdf  pyramide.fdf
src/: bresenham.c  control.c  draw_map.c  error_messages.c  get_next_line.c  list_born2die.c  main.c  parse_map.c  rotate_map.c  validation.c
